# RagVL

./: .gitignore  LICENSE  README.md  flickr30k_pipeline.py  merge_lora.py  mmqa_oracle.py  mmqa_pipeline.py  mscoco_pipeline.py  requirements.txt  webqa_oracle.py  webqa_pipeline.py
finetune/scripts/: finetune_task_lora.sh
finetune/scripts/llava/: finetune_task_lora.sh
finetune/scripts/mplug_owl2/: finetune_lora.sh
finetune/scripts/qwenvl/: finetune.py  finetune_lora_ds.sh
internvl_chat/: pyproject.toml
internvl_chat/eval/: run_internvl.py
internvl_chat/internvl/model/: __init__.py
internvl_chat/internvl/model/internvl_chat/: modeling_internvl_chat.py
internvl_chat/shell/data/: internvl_2_finetune_flickr30k_rerank.json  internvl_2_finetune_mmqa_qa.json  internvl_2_finetune_mmqa_rerank.json  internvl_2_finetune_mscoco_rerank.json  internvl_2_finetune_webqa_qa.json  internvl_2_finetune_webqa_rerank.json
internvl_chat/shell/internvl2.0/2nd_finetune/: internvl2_1b_qwen2_0_5b_dynamic_res_2nd_finetune_lora.sh  internvl2_2b_internlm2_1_8b_dynamic_res_2nd_finetune_lora.sh
llava/: mm_utils.py
llava/eval/: run_llava.py
llava/model/: llava_arch.py
llava/model/language_model/: llava_llama.py
llava/train/: train.py
mplug_owl2/evaluate/: run_mplug_owl2.py
mplug_owl2/model/: __init__.py  builder.py  modeling_llama2.py  modeling_mplug_owl2.py  visual_encoder.py
mplug_owl2/train/: train.py  train_mem.py
qwenvl/: run_qwenvl.py
utils/: indexing_faiss.py  metrics.py  model_series.py  utils.py
vcd_utils/: vcd_add_noise.py  vcd_sample.py
(+8 files in other folders)
